# HistonesProject

./: .gitmodules
matlab/: integrated_langmuir.m
modeling/: requirements.txt
modeling/histones_modeling/: pyproject.toml  requirements.txt
modeling/histones_modeling/spr/: dynamics.py
modeling/histones_modeling/src/histones_modeling/: EGFET.ipynb  embc2024.py  figures.ipynb  load_spr.py  model_prototype.py  simulation_parameter_search.py  spr_analytical.ipynb
modeling/histones_modeling/src/histones_modeling/egfet/: load_data.py
modeling/histones_modeling/src/histones_modeling/spr/: biacoreT2000.py
modeling/histones_modeling/tests/: test_fit.py
modeling/pipelinegen_histones/: pyproject.toml
modeling/pipelinegen_histones/src/pipelinegen_histones/: utils.py
modeling/pipelinegen_histones/src/pipelinegen_histones/data/: egfet.py
modeling/pipelinegen_histones/src/pipelinegen_histones/models/: mixins.py
modeling/requirements/: dev.in  requirements.in
pipelinegen_histones/: pyproject.toml
pipelinegen_histones/src/histones/: components.py  constants.py  graph_interpretation_outputs.py  mosfet.py
pipelinegen_histones/src/pipelinegen_histones/data/: __init__.py  egfet.py
pipelinegen_histones/src/pipelinegen_histones/models/: __init__.py  autoencoders.py  classifiers.py
python/: conftest.py
python/requirements/: requirements.in  requirements.txt
python/src/: EGFET.ipynb  dynamics.py  embc2024.py  experiments.sh  experiments2.sh
python/src/egfet/: load_data.py
