[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "histones_modeling"
version = "0.0.1"
description = "A project for modeling histones"
authors = [
    { name="Jeffrey Barahona", email="your.email@example.com" }
]
dependencies = [
    # Add your project dependencies here
]

