[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipelinegen_histones"
version = "0.0.1"
description = "A plugin for training pipelines"
authors = [
    { name="Jeffrey Barahona", email="your.email@example.com" }
]
dependencies = [
    # Add your project dependencies here
]
